RPi Max6675 driver in initial state

--- a/src/vscp/drivers/level2/rpigpio/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpigpio/linux/Makefile.in
@@ -149,8 +149,8 @@ dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
 
 install: all
 	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level2
-	$(INSTALL_PROGRAM) vscpl2drv-rpigpio.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
-	$(INSTALL_PROGRAM) vscpl2drv-rpigpio-if2.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
+	$(INSTALL_PROGRAM) vscpl2drv-rpimax6675.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
+	$(INSTALL_PROGRAM) vscpl2drv-rpimax6675-if2.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
 
@@ -168,8 +168,8 @@ clean:
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl2drv-rpigpio.so
-	rm -f vscpl2drv-rpigpio-if2.so
+	rm -f vscpl2drv-rpimax6675.so
+	rm -f vscpl2drv-rpimax6675-if2.so
 	rm -f test
 	rm -f test-if2
 	rm -f *.deb
