--- a/.gitignore
+++ b/.gitignore
@@ -311,3 +311,9 @@ src/vscp/helperlib/linux/examples/send_periodic
 src/vscp/helperlib/linux/examples/simple_tls_client
 src/vscp/helperlib/linux/examples/simple_tls_server
 src/vscp/helperlib/linux/examples/stcp_tls_client
+src/vscp/drivers/level2/rpimax6675/linux/test
+src/vscp/drivers/level2/rpigpio/linux/test
+src/vscp/drivers/level2/rpigpio/linux/test-if2
+src/vscp/drivers/level2/rpimax6675/linux/test
+src/vscp/drivers/level2/rpimax6675/linux/test-if2
+src/vscp/drivers/level2/rpimax6675/linux/test
