Initial code for RPi LCD

--- a/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
@@ -40,18 +40,20 @@ BUILD_VERSION = `sed '38!d' ../../../../common/version.h  | cut -b 33-
 
 CFLAGS = -std=c99 @CFLAGS@ -fPIC @WXBASE_CFLAGS@ -DCBC -I../../../../common -I../../../../../common
 CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I. -I../common -I../../../../common -I../../../../../common
+CPPFLAGS = -DVSCP_NO_WX -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I. -I../common -I../../../../common -I../../../../../common
 
 LDFLAGS = @LDFLAGS@
-EXTRALIBS = -lpigpio @EXTRALIBS@ 
+EXTRALIBS = -lpigpio -lpigpiod_if2 -lexpat @EXTRALIBS@ 
 ifeq ($(STATIC),yes)
 EXTRALIBS += @WXBASE_STATIC_LIBS@
 else
 EXTRALIBS += @WXBASE_LIBS@
 endif
+GPIOLIB = -lpigpio 
+GPIOLIB_IF2 = -lpigpiod_if2
 
 DLFLAGS = -g -shared -fPIC
-TRIP = strip
+STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_DIR = /usr/bin/install -c -d
@@ -70,8 +72,7 @@ DLLPREFIX = lib
 WX_RELEASE = 3.0
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPRPILCD_OBJECTS = vscpl2drv-rpilcd.o\
-	rpilcd.o\
+VSCPRPIMAX6675_OBJECTS = vscpl2drv-rpilcd.o\
 	vscpremotetcpif.o\
 	vscphelper.o\
 	sockettcp.o\
@@ -85,20 +86,30 @@ VSCPRPILCD_OBJECTS = vscpl2drv-rpilcd.o\
 
 ### Targets: ###
 
-all: vscpl2drv-rpilcd.so test
+all: rpilcd.o vscpl2drv-rpilcd.so vscpl2drv-rpilcd-if2.so test-if2.o test test-if2
 
-test:  test.o $(VSCPRPILCD_OBJECTS)
-	$(CXX) -o $@ test.o $(VSCPRPILCD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+test:  test.o rpilcd.o  $(VSCPRPIMAX6675_OBJECTS)
+	$(CXX) -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -o $@ test.o rpilcd.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
+
+test-if2: test-if2.o rpilcd-if2.o  $(VSCPRPIMAX6675_OBJECTS)
+	$(CXX) -DPIGPIOIF2 $(CXXFLAGS) $(CPPFLAGS) -o test-if2 test-if2.o rpilcd-if2.o  $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS_IF2)
+
+test-if2.o:  test.o 
+	$(CXX) -c test.cpp -DUSE_PIGPIOD $(CXXFLAGS) $(CPPFLAGS) -o test-if2.o 
 
 # Build the Linux DL
-vscpl2drv-rpilcd.so: $(VSCPRPILCD_OBJECTS)
-	$(CXX) -o $@ $(VSCPRPILCD_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+vscpl2drv-rpilcd.so: $(VSCPRPIMAX6675_OBJECTS) rpilcd.o
+	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd.o $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
+
+vscpl2drv-rpilcd-if2.so: $(VSCPRPIMAX6675_OBJECTS) rpilcd-if2.o
+	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd-if2.o  $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS_IF2)
 
 vscpl2drv-rpilcd.o: vscpl2drv-rpilcd.cpp vscpl2drv-rpilcd.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c vscpl2drv-rpilcd.cpp -o $@
 
 rpilcd.o: rpilcd.cpp rpilcd.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c rpilcd.cpp -o $@
+	$(CXX)  -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -c rpilcd.cpp -o $@
+	$(CXX) -DPIGPIOIF2 $(CXXFLAGS) $(CPPFLAGS) -c rpilcd.cpp -o rpilcd-if2.o
 
 vscphelperlib.o: ../../../../vscphelperlib.cpp ../../../../vscphelperlib.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../vscphelperlib.cpp -o $@
@@ -139,6 +150,7 @@ dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
 install: all
 	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level2
 	$(INSTALL_PROGRAM) vscpl2drv-rpilcd.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
+	$(INSTALL_PROGRAM) vscpl2drv-rpilcd-if2.so $(VSCP_PROJ_BASE_DIR)/drivers/level2
 
 uninstall: 
 
@@ -157,7 +169,9 @@ clean:
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
 	rm -f vscpl2drv-rpilcd.so
+	rm -f vscpl2drv-rpilcd-if2.so
 	rm -f test
+	rm -f test-if2
 	rm -f *.deb
 	rm -f *.gz
 
