--- a/.gitignore
+++ b/.gitignore
@@ -317,3 +317,5 @@ src/vscp/drivers/level2/rpigpio/linux/test-if2
 src/vscp/drivers/level2/rpimax6675/linux/test
 src/vscp/drivers/level2/rpimax6675/linux/test-if2
 src/vscp/drivers/level2/rpimax6675/linux/test
+src/vscp/drivers/level2/rpilcd/linux/test
+src/vscp/drivers/level2/rpilcd/linux/test-if2
