--- a/src/vscp/drivers/level2/rpimax6675/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpimax6675/linux/Makefile.in
@@ -89,7 +89,7 @@ VSCPRPIMAX6675_OBJECTS = vscpl2drv-rpimax6675.o\
 all: max6675.o max6675obj.o vscpl2drv-rpimax6675.so vscpl2drv-rpimax6675-if2.so test-if2.o test test-if2
 
 test:  test.o max6675.o max6675obj.o $(VSCPRPIMAX6675_OBJECTS)
-	$(CXX) -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -o $@ test.o max6675obj.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
+	$(CXX) -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -o $@ test.o max6675.o max6675obj.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
 
 test-if2: test-if2.o max6675-if2.o max6675obj-if2.o $(VSCPRPIMAX6675_OBJECTS)
 	$(CXX) -DPIGPIOIF2 $(CXXFLAGS) $(CPPFLAGS) -o test-if2 test-if2.o max6675-if2.o max6675obj-if2.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS_IF2)
