--- a/.gitignore
+++ b/.gitignore
@@ -319,3 +319,5 @@ src/vscp/drivers/level2/rpimax6675/linux/test-if2
 src/vscp/drivers/level2/rpimax6675/linux/test
 src/vscp/drivers/level2/rpilcd/linux/test
 src/vscp/drivers/level2/rpilcd/linux/test-if2
+src/vscp/relayd/a.out
+src/vscp/relayd/relayd
