--- a/src/vscp/drivers/level1/candrv/linux/Makefile.in
+++ b/src/vscp/drivers/level1/candrv/linux/Makefile.in
@@ -15,7 +15,7 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
-TRIP = strip
+STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_DIR = /usr/bin/install -c -d
