--- a/src/vscp/relayd/Makefile.in
+++ b/src/vscp/relayd/Makefile.in
@@ -19,14 +19,10 @@ MINOR_VERSION = `sed '36!d' ../../../../common/version.h  | cut -b 33-`
 RELEASE_VERSION = `sed '37!d' ../../../../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../../../../common/version.h  | cut -b 33-
 
-CFLAGS = -std=c99 @CFLAGS@ -fPIC  -DCBC -I../../../../common -I../../../../../common
-CXXFLAGS = -D__LINUX__ -fPIC -D_REENTRANT 
-CPPFLAGS = -D__LINUX__ -fPIC -fno-var-tracking-assignments -I../../../../common -I../../../../../common
-
+CFLAGS = @CFLAGS@ -fPIC  -DCBC -I. -I../common -I../../common
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 
-DLFLAGS = -g -shared -fPIC -Wl,--no-undefined
 STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
@@ -40,44 +36,36 @@ datadir = ${prefix}/share
 includedir = ${prefix}/include
 DLLPREFIX = lib
 
-
 ### Variables: ###
 
-CAN4VSCP_OBJECTS = vscpl1drv-can4vscp.o\
-	can4vscpobj.o\
-	dllist.o\
-	crc8.o\
-	com.o
+RELAYD_OBJECTS = relayd.o\
+	sockettcp.o\
+	vscpmd5.o\
 
 ### Targets: ###
 
-all: vscpl1drv-can4vscp.so
+all: relayd
 
-test:  test.o $(PROJOBJS)
-	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)
+relayd:  $(RELAYD_OBJECTS)
+	$(CC) -o $@ $(RELAYD_OBJECTS) $(LDFLAGS)  $(EXTRALIBS)
 
-vscpl1drv-can4vscp.so: $(CAN4VSCP_OBJECTS)
-	$(CXX) -o $@ $(CAN4VSCP_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)
+relayd.o: relayd.c relayd.h
+	$(CC) $(CFLAGS)  -c relayd.c -o $@
 
-can4vscpobj.o: ../common/can4vscpobj.cpp ../common/can4vscpobj.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/can4vscpobj.cpp -o $@
+sockettcp.o: ../../common/sockettcp.c ../../common/sockettcp.h
+	$(CC) $(CFLAGS) -c ../../common/sockettcp.c -o $@
 
-guid.o: ../../../../common/guid.cpp ../../../../common/guid.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/guid.cpp -o $@
+dllist.o: ../../common/dllist.c ../../common/dllist.h
+	$(CC) $(CFLAGS) -c ../../common/dllist.c -o $@
 
-dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
-	$(CC) $(CFLAGS) -c ../../../../../common/dllist.c -o $@
+crc8.o: ../../common/crc8.c ../../common/crc8.h
+	$(CC) $(CFLAGS) -c ../../common/crc8.c -o $@
 
-crc8.o: ../../../../../common/crc8.c ../../../../../common/crc8.h
-	$(CC) $(CFLAGS) -c ../../../../../common/crc8.c -o $@
-
-com.o: ../../../../../common/com.cpp ../../../../../common/com.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../../common/com.cpp -o $@
+vscpmd5.o: ../../common/vscpmd5.c ../../common/vscpmd5.h
+	$(CC) $(CFLAGS) -c ../../common/vscpmd5.c -o $@	
 	
 install: all
-	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level1
-	$(INSTALL_PROGRAM) -d $(VSCP_PROJ_BASE_DIR)/drivers/level1
-	$(INSTALL_PROGRAM) vscpl1drv-can4vscp.so $(VSCP_PROJ_BASE_DIR)/drivers/level1
+	$(INSTALL_PROGRAM) -d $(VSCP_PROJ_BASE_DIR)
 
 uninstall:
 
@@ -94,9 +82,6 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl1drv-can4vscp.so
-	rm -f test
-	rm -rf ../common/*~
 	rm -rf *~
 	rm -f *.gz
 	rm -f *.deb
