--- a/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rpilcd/linux/Makefile.in
@@ -10,27 +10,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
-
 
 CC = @CC@
 CXX = @CXX@
-
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../../../../common/version.h  | cut -b 33-`
@@ -38,17 +21,12 @@ MINOR_VERSION = `sed '36!d' ../../../../common/version.h  | cut -b 33-`
 RELEASE_VERSION = `sed '37!d' ../../../../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../../../../common/version.h  | cut -b 33-
 
-CFLAGS = -std=c99 @CFLAGS@ -fPIC @WXBASE_CFLAGS@ -DCBC -I../../../../common -I../../../../../common
-CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = -DVSCP_NO_WX -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I. -I../common -I../../../../common -I../../../../../common
+CFLAGS = -std=c99 @CFLAGS@ -fPIC -DCBC -I@top_srcdir@ -I../../../../common -I../../../../../common
+CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ 
+CPPFLAGS = -DVSCP_NO_WX -D__LINUX__ -fPIC @CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I. -I../common -I../../../../common -I../../../../../common
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = -lpigpio -lpigpiod_if2 -lexpat @EXTRALIBS@ 
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 GPIOLIB = -lpigpio 
 GPIOLIB_IF2 = -lpigpiod_if2
 
@@ -69,12 +47,11 @@ DLLPREFIX = lib
 
 ### Variables: ###
 
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 VSCPRPIMAX6675_OBJECTS = vscpl2drv-rpilcd.o\
 	vscpremotetcpif.o\
 	vscphelper.o\
+	vscpdatetime.o\
 	sockettcp.o\
 	guid.o\
 	crc.o\
@@ -89,20 +66,20 @@ VSCPRPIMAX6675_OBJECTS = vscpl2drv-rpilcd.o\
 all: rpilcd.o vscpl2drv-rpilcd.so vscpl2drv-rpilcd-if2.so test-if2.o test test-if2
 
 test:  test.o rpilcd.o  $(VSCPRPIMAX6675_OBJECTS)
-	$(CXX) -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -o $@ test.o rpilcd.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
+	$(CXX) -DPIGPIO $(CXXFLAGS) $(CPPFLAGS) -o $@ test.o rpilcd.o $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME)  $(EXTRALIBS) $(GPIOLIBS)
 
 test-if2: test-if2.o rpilcd-if2.o  $(VSCPRPIMAX6675_OBJECTS)
-	$(CXX) -DPIGPIOIF2 $(CXXFLAGS) $(CPPFLAGS) -o test-if2 test-if2.o rpilcd-if2.o  $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS_IF2)
+	$(CXX) -DPIGPIOIF2 $(CXXFLAGS) $(CPPFLAGS) -o test-if2 test-if2.o rpilcd-if2.o  $(VSCPRPIMAX6675_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME)  $(EXTRALIBS) $(GPIOLIBS_IF2)
 
 test-if2.o:  test.o 
 	$(CXX) -c test.cpp -DUSE_PIGPIOD $(CXXFLAGS) $(CPPFLAGS) -o test-if2.o 
 
 # Build the Linux DL
 vscpl2drv-rpilcd.so: $(VSCPRPIMAX6675_OBJECTS) rpilcd.o
-	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd.o $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS)
+	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd.o $(DLFLAGS) -L$(LIBDIRNAME)  $(EXTRALIBS) $(GPIOLIBS)
 
 vscpl2drv-rpilcd-if2.so: $(VSCPRPIMAX6675_OBJECTS) rpilcd-if2.o
-	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd-if2.o  $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) $(GPIOLIBS_IF2)
+	$(CXX) -o $@  $(VSCPRPIMAX6675_OBJECTS) rpilcd-if2.o  $(DLFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS) $(GPIOLIBS_IF2)
 
 vscpl2drv-rpilcd.o: vscpl2drv-rpilcd.cpp vscpl2drv-rpilcd.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c vscpl2drv-rpilcd.cpp -o $@
@@ -119,6 +96,9 @@ vscpremotetcpif.o: ../../../../common/vscpremotetcpif.cpp ../../../../common/vsc
 
 vscphelper.o: ../../../../common/vscphelper.cpp ../../../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscphelper.cpp -o $@
+
+vscpdatetime.o: ../../../../common/vscpdatetime.cpp ../../../../common/vscpdatetime.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscpdatetime.cpp -o $@
 
 sockettcp.o: ../../../../../common/sockettcp.c ../../../../../common/sockettcp.h
 	$(CC) $(CFLAGS) -c ../../../../../common/sockettcp.c -o $@
