--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -32,9 +32,9 @@ WXGTK_LIBS = @WXGTK_LIBS@
 WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
-CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I../common -I../../common -I../../common/lua -I../../common/lua/src
+CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
 CXXFLAGS = -std=c++11 @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I../common -I../../common -I../../common/lua -I../../common/lua/src
+CPPFLAGS = @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
 CPPFLAGS += $(MONGOOSE_CFLAGS)
 
 # get version from the version file
