--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -10,26 +10,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
 
 CC = @CC@
 CXX = @CXX@
-
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../common/version.h  | cut -b 33-`
@@ -38,18 +22,12 @@ RELEASE_VERSION = `sed '37!d' ../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../common/version.h  | cut -b 33-
 LIB_PLUS_VER = "libvscpl1.so.$(MAJOR_VERSION).$(MINOR_VERSION).$(RELEASE_VERSION)"
 
-MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
-CFLAGS = -std=c99 -fPIC @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I../common -I../../common
-CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I../common -I../../common
+CFLAGS = -std=c99 -fPIC @CFLAGS@ -DCBC -I@top_srcdir@ -I../common -I../../common
+CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ 
+CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ 
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 
 DLFLAGS = -g -shared -fPIC
 STRIP = strip
@@ -69,8 +47,6 @@ DLLPREFIX = lib
 ### Variables: ###
 
 DESTDIR =
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 VSCPL1_OBJECTS =  vscpl1.o \
 	vscpremotetcpif.o \
@@ -80,7 +56,6 @@ VSCPL1_OBJECTS =  vscpl1.o \
 	crc8.o \
 	vscp_aes.o \
 	vscpmd5.o \
-	mongoose.o \
 	fastpbkdf2.o \
 	vscpbase64.o
 
@@ -89,10 +64,10 @@ VSCPL1_OBJECTS =  vscpl1.o \
 all: libvscpl1.so test
 
 test:  test.o $(PROJOBJS)
-	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)
 
 libvscpl1.so: $(VSCPL1_OBJECTS)
-	$(CXX) -o $@ $(VSCPL1_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 	
+	$(CXX) -o $@ $(VSCPL1_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME)  $(EXTRALIBS) 	
 
 vscpl1.o: vscpl1.cpp vscpl1.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c vscpl1.cpp -o $@
@@ -121,9 +96,6 @@ crc8.o: ../../common/crc8.c ../../common/crc8.h
 vscpbase64.o: ../../common/vscpbase64.c ../../common/vscpbase64.h
 	$(CC) $(CFLAGS) -c ../../common/vscpbase64.c -o $@
 	
-mongoose.o: ../../common/mongoose.c ../../common/mongoose.h
-	$(CC) $(CFLAGS) $(MONGOOSE_CFLAGS) -c ../../common/mongoose.c -o $@
-
 fastpbkdf2.o: ../../common/fastpbkdf2.c ../../common/fastpbkdf2.h
 	$(CC) $(CFLAGS) -c ../../common/fastpbkdf2.c -o $@
 
