--- a/src/vscp/vscp-mkpasswd/Makefile.in
+++ b/src/vscp/vscp-mkpasswd/Makefile.in
@@ -10,26 +10,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
 
 CC = @CC@
 CXX = @CXX@
-
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../../common/version.h  | cut -b 33-`
@@ -37,19 +21,13 @@ MINOR_VERSION = `sed '36!d' ../../common/version.h  | cut -b 33-`
 RELEASE_VERSION = `sed '37!d' ../../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../../common/version.h  | cut -b 33-
 
-MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
-CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I@top_srcdir@ -I../common -I../../common
-CXXFLAGS = -std=c++11 @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common
-CPPFLAGS += $(MONGOOSE_CFLAGS)
+CFLAGS = -std=c99 @CFLAGS@  -DCBC -I@top_srcdir@ -I../common -I../../common
+CXXFLAGS = -std=c++11 @CXXFLAGS@ 
+CPPFLAGS = @CPPFLAGS@  -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common
+
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 
 STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
@@ -67,8 +45,6 @@ DLLPREFIX = lib
 ### Variables: ###
 
 DESTDIR =
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 MKPASSWD_OBJECTS =  vscp-mkpasswd.o \
 	vscphelper.o \
@@ -112,7 +88,7 @@ vscpmd5.o: ../../common/vscpmd5.c ../../common/vscpmd5.h
 	$(CC) $(CFLAGS) -c ../../common/vscpmd5.c -o $@
 
 vscp-mkpasswd: $(MKPASSWD_OBJECTS)
-	$(CXX) -o $@ $(MKPASSWD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+	$(CXX) -o $@ $(MKPASSWD_OBJECTS) $(LDFLAGS) $(EXTRALIBS)
 
 install: all
 	$(STRIP)  vscp-mkpasswd
