--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -10,32 +10,14 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
 
 CC = @CC@
 CXX = @CXX@
 
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
-
-MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
-CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
-CXXFLAGS = -std=c++11 @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
-CPPFLAGS += $(MONGOOSE_CFLAGS)
+CFLAGS = -std=c99 @CFLAGS@ -DCBC -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
+CXXFLAGS = -std=c++11 @CXXFLAGS@ 
+CPPFLAGS = @CPPFLAGS@  -fno-var-tracking-assignments -I@top_srcdir@ -I../common -I../../common -I../../common/lua -I../../common/lua/src
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../../common/version.h  | cut -b 33-`
@@ -45,11 +27,6 @@ BUILD_VERSION = `sed '38!d' ../../common/version.h  | cut -b 33-
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 
 STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
@@ -67,19 +44,17 @@ DLLPREFIX = lib
 ### Variables: ###
 
 DESTDIR =
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 VSCPCMD_OBJECTS =  vscpcmd.o \
 	vscpremotetcpif.o \
 	vscphelper.o \
+	vscpdatetime.o \
 	crc.o \
 	crc8.o \
 	guid.o \
 	sockettcp.o \
 	vscp_aes.o \
 	vscpmd5.o \
-	mongoose.o \
 	fastpbkdf2.o \
 	vscpbase64.o
 
@@ -88,7 +63,7 @@ VSCPCMD_OBJECTS =  vscpcmd.o \
 all: vscpcmd
 
 vscpcmd: $(VSCPCMD_OBJECTS)
-	$(CXX) -o $@ $(VSCPCMD_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(EXTRALIBS)
+	$(CXX) -o $@ $(VSCPCMD_OBJECTS) $(LDFLAGS) $(EXTRALIBS)
 
 vscphelperlib.o: ../vscphelperlib.cpp ../vscphelperlib.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../vscphelperlib.cpp -o $@
@@ -98,6 +73,9 @@ vscpremotetcpif.o: ../common/vscpremotetcpif.cpp ../common/vscpremotetcpif.h
 
 vscphelper.o: ../common/vscphelper.cpp ../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/vscphelper.cpp -o $@
+
+vscpdatetime.o: ../common/vscpdatetime.cpp ../common/vscpdatetime.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/vscpdatetime.cpp -o $@
 
 guid.o: ../common/guid.cpp ../common/guid.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../common/guid.cpp -o $@
