--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -10,26 +10,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
 
 CC = @CC@
 CXX = @CXX@
-
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../../../../common/version.h  | cut -b 33-`
@@ -37,17 +21,12 @@ MINOR_VERSION = `sed '36!d' ../../../../common/version.h  | cut -b 33-`
 RELEASE_VERSION = `sed '37!d' ../../../../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../../../../common/version.h  | cut -b 33-
 
-CFLAGS = -std=c99 @CFLAGS@ -fPIC @WXBASE_CFLAGS@ -DCBC -I@top_srcdir@ -I../../../../common -I../../../../../common
-CXXFLAGS = -std=c++11 -D__LINUX__ @CFLAGS@ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../../../../common -I../../../../../common
+CFLAGS = -std=c99 @CFLAGS@ -fPIC -DCBC -I@top_srcdir@ -I../../../../common -I../../../../../common
+CXXFLAGS = -std=c++11 -D__LINUX__ @CFLAGS@ -fPIC -D_REENTRANT @CXXFLAGS@ 
+CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@  -fno-var-tracking-assignments -I@top_srcdir@ -I../../../../common -I../../../../../common
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ 
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 
 DLFLAGS = -g -shared -fPIC
 STRIP = strip
@@ -65,9 +44,6 @@ DLLPREFIX = lib
 
 
 ### Variables: ###
-
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 LMSENSOROBJ =  vscpl2drv_lmsensors.o\
 	lmsensors.o \
@@ -90,7 +66,7 @@ all: vscpl2drv-lmsensors.so
 
 # Build the Linux DL
 vscpl2drv-lmsensors.so: $(LMSENSOROBJ)
-	$(CXX) -o $@ $(LMSENSOROBJ) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+	$(CXX) -o $@ $(LMSENSOROBJ) $(DLFLAGS) $(EXTRALIBS) 
 
 lmsensors.o: lmsensors.cpp lmsensors.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c lmsensors.cpp -o $@
