--- a/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
@@ -10,26 +10,10 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
-top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
-top_wxbuilddir = @top_wxbuilddir@
 
 CC = @CC@
 CXX = @CXX@
-
-# wxBase flags and libs
-WXBASE_CPPFLAGS = @WXBASE_CPPFLAGS@
-WXBASE_CXXFLAGS = @WXBASE_CXXFLAGS@
-WXBASE_CFLAGS = @WXBASE_CFLAGS@
-WXBASE_LIBS = @WXBASE_LIBS@
-WXBASE_STATIC_LIBS = @WXBASE_STATIC_LIBS@
-
-# wxGTK flags and libs
-WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
-WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
-WXGTK_CFLAGS = @WXGTK_CFLAGS@
-WXGTK_LIBS = @WXGTK_LIBS@
-WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 # get version from the version file
 MAJOR_VERSION = `sed '35!d' ../../../../common/version.h  | cut -b 33-`
@@ -37,17 +21,12 @@ MINOR_VERSION = `sed '36!d' ../../../../common/version.h  | cut -b 33-`
 RELEASE_VERSION = `sed '37!d' ../../../../common/version.h  | cut -b 33-`
 BUILD_VERSION = `sed '38!d' ../../../../common/version.h  | cut -b 33-
 
-CFLAGS = -std=c99 @CFLAGS@ -fPIC -D_DEFAULT_SOURCE @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I@top_srcdir@ -I../../../../common -I../../../../../common
-CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ @WXBASE_CXXFLAGS@
-CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../../../../common -I../../../../../common
+CFLAGS = -std=c99 @CFLAGS@ -fPIC -D_DEFAULT_SOURCE @CFLAGS@  -DCBC -I@top_srcdir@ -I../../../../common -I../../../../../common
+CXXFLAGS = -std=c++11 -D__LINUX__ -fPIC -D_REENTRANT @CXXFLAGS@ 
+CPPFLAGS = -D__LINUX__ -fPIC @CPPFLAGS@ -fno-var-tracking-assignments -I@top_srcdir@ -I../../../../common -I../../../../../common
 
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ -lpcap
-ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_STATIC_LIBS@
-else
-EXTRALIBS += @WXBASE_LIBS@
-endif
 
 DLFLAGS = -g -shared -fPIC
 STRIP = strip
@@ -66,13 +45,11 @@ DLLPREFIX = lib
 
 ### Variables: ###
 
-WX_RELEASE = 3.0
-LIBDIRNAME = $(top_wxbuilddir)lib
 
 RAWETH_OBJECTS = vscpl2drv_raweth.o\
-	dlldrvobj.o\
 	vscpremotetcpif.o\
 	vscphelper.o\
+	vscpdatetime.o\
 	sockettcp.o\
 	guid.o\
 	crc.o\
@@ -82,20 +59,16 @@ RAWETH_OBJECTS = vscpl2drv_raweth.o\
 	fastpbkdf2.o\
 	vscpbase64.o
 
-
 ### Targets: ###
 
 all: vscpl2drv-raweth.so test
 
 test:  test.o $(PROJOBJS)
-	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
+	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS)  $(EXTRALIBS)
 
 # Build the Linux DL
 vscpl2drv-raweth.so: $(RAWETH_OBJECTS)
-	$(CXX) -o $@ $(RAWETH_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
-
-dlldrvobj.o: dlldrvobj.cpp dlldrvobj.h
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c dlldrvobj.cpp -o $@
+	$(CXX) -o $@ $(RAWETH_OBJECTS) $(DLFLAGS)  $(EXTRALIBS) 
 
 vscphelperlib.o: ../../../../vscphelperlib.cpp ../../../../vscphelperlib.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../vscphelperlib.cpp -o $@
@@ -105,6 +78,9 @@ vscpremotetcpif.o: ../../../../common/vscpremotetcpif.cpp ../../../../common/vsc
 
 vscphelper.o: ../../../../common/vscphelper.cpp ../../../../common/vscphelper.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscphelper.cpp -o $@
+
+vscpdatetime.o: ../../../../common/vscpdatetime.cpp ../../../../common/vscpdatetime.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c ../../../../common/vscpdatetime.cpp -o $@
 
 sockettcp.o: ../../../../../common/sockettcp.c ../../../../../common/sockettcp.h
 	$(CC) $(CFLAGS) -c ../../../../../common/sockettcp.c -o $@
@@ -129,9 +105,6 @@ fastpbkdf2.o: ../../../../../common/fastpbkdf2.c ../../../../../common/fastpbkdf
 
 vscpmd5.o: ../../../../../common/vscpmd5.c ../../../../../common/vscpmd5.h
 	$(CC) $(CFLAGS) -c ../../../../../common/vscpmd5.c -o $@	
-
-dllist.o: ../../../../../common/dllist.c ../../../../../common/dllist.h
-	$(CC) $(CFLAGS) -c ../../../../../common/dllist.c -o $@	
 
 install: all
 	mkdir -p $(VSCP_PROJ_BASE_DIR)/drivers/level2
